--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -24,8 +24,19 @@
     font-size: @font-size * 3;
   }
 }
-.body-white{
-  background: #fff;
+body{
+  background: #f2f2f2;
+}
+*, :after, :before {
+  box-sizing: border-box;
+}
+body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, /* structural elements 结构元素 */
+dl, dt, dd, ul, ol, li, /* list elements 列表元素 */
+pre, /* text formatting elements 文本格式元素 */
+form, fieldset, legend, button, input, textarea, /* form elements 表单元素 */
+th, td /* table elements 表格元素 */ {
+    margin:0;
+    padding:0;
 }
 address, cite, dfn,em, b,caption,code,strong,th,var,em,i{
   font-style:normal;
@@ -34,4 +45,64 @@ address, cite, dfn,em, b,caption,code,strong,th,var,em,i{
 input,textarea {
   -webkit-user-select: text;
   user-select: text;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-size:100%;
+}
+
+address, cite, dfn, em, b,caption,code,strong,th,var,em,i{
+  font-style:normal;
+  font-weight:normal;
+} 
+/* 将斜体扶正 */
+code, kbd, pre, samp {
+  font-family:courier new, courier, monospace;
+} /* 统一等宽字体 */
+small {
+  font-size:0.12rem;
+} /* 小于 12px 的中文很难阅读，让 small 正常化 */
+/** 重置列表元素 **/
+ul, ol ,li,dl,dd{
+  list-style:none;
+}
+/** 重置文本格式元素 **/
+a {
+  color:#bf2c2a;
+  text-decoration:none;
+}
+a:hover {
+
+  text-decoration:none;
+}
+sup {
+  vertical-align:text-top;
+} /* 重置，减少对行高的影响 */
+sub {
+  vertical-align:text-bottom;
+}
+a:hover,a:active, input, :focus { outline:none;}
+/** 重置表单元素 **/
+legend {
+  color:#000;
+} /* for ie6 */
+fieldset, img {
+  border:0;-ms-interpolation-mode:bicubic;
+} /* img 搭车：让链接里的 img 无边框 */
+button, input, select, textarea {
+  font-size:100%;
+} /* 使得表单元素在 ie 下能继承字体大小 */
+/* 注：optgroup 无法扶正 */
+
+/** 重置表格元素 **/
+table {
+  border-collapse:collapse;
+  border-spacing:0;
+  word-break:break-all;
+}
+/* 重置 HTML5 元素 */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
+  display:block;
+  margin:0;
+  padding:0;
 }
