--- a/src/page/dy/index/index.less
+++ b/src/page/dy/index/index.less
@@ -34,3 +34,21 @@
     padding-left: 12px;
     position: relative;
 }
+.header{
+  height: 300/@px2rem;
+  overflow: hidden;
+  background: #fff;
+  border-bottom: 1px solid #ebebeb;
+  box-shadow: 0 1px 1px rgba(0,0,0,.03);
+  .logo{
+    width: 240/@px2rem;
+    height: 240/@px2rem;
+    background: url('../../images/logo.jpeg') 0 0 no-repeat;
+    background-size: 100% 100%;
+  }
+}
+.advertisement{
+  background: #fff;
+  height: 450/@px2rem;
+  margin-bottom: 100/@px2rem;
+}
