--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -106,3 +106,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   margin:0;
   padding:0;
 }
+
+.footer{
+   height: 200/@px2rem;
+   background:#fff;
+   padding-top: 30/@px2rem;
+   .copyright{
+      color: #212529;
+   }
+}
