--- a/src/page/dy/index/index.less
+++ b/src/page/dy/index/index.less
@@ -12,6 +12,8 @@
   flex-wrap: wrap;
   margin-right: -12px;
   margin-left: -12px;
+  margin-bottom: 100/@px2rem;
+  color: #212529;
 }
 .left-body{
     flex-basis: 0;
@@ -33,6 +35,12 @@
     padding-right: 12px;
     padding-left: 12px;
     position: relative;
+}
+.card-body{
+  background:#fff;
+  border-radius: 20/@px2rem;
+  padding: 40/@px2rem;
+  box-shadow: 1px 1px 2px #e2dede;
 }
 .header{
   height: 300/@px2rem;
