添加博文内容

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -106,7 +106,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   margin:0;
   padding:0;
 }
-
+.txt-red{
+  color: #bf2c2a;
+}
 .footer{
    height: 200/@px2rem;
    background:#fff;
