--- a/src/page/dy/index/index.less
+++ b/src/page/dy/index/index.less
@@ -41,22 +41,13 @@
   border-radius: 20/@px2rem;
   padding: 40/@px2rem;
   box-shadow: 1px 1px 2px #e2dede;
-}
-.header{
-  height: 300/@px2rem;
-  overflow: hidden;
-  background: #fff;
-  border-bottom: 1px solid #ebebeb;
-  box-shadow: 0 1px 1px rgba(0,0,0,.03);
-  .logo{
-    width: 240/@px2rem;
-    height: 240/@px2rem;
-    background: url('../../images/logo.jpeg') 0 0 no-repeat;
-    background-size: 100% 100%;
-  }
+  margin-bottom: 100/@px2rem;
 }
 .advertisement{
   background: #fff;
   height: 450/@px2rem;
   margin-bottom: 100/@px2rem;
+}
+.chirld-nav{
+  margin-bottom: 60/@px2rem;
 }
