--- a/src/page/dy/index/index.less
+++ b/src/page/dy/index/index.less
@@ -26,6 +26,21 @@
     article{
        padding: 160/@px2rem;
        background:#fff;
+       p{
+         margin-bottom: 40/@px2rem;
+         text-indent: 80/@px2rem;
+       }
+       h4{
+         margin-bottom: 20/@px2rem;
+       }
+    }
+    .article-title {
+      color:#212529;
+      font-size: 120/@px2rem;
+    }
+    .article-title-sub{
+      border-bottom: 1/@px2rem solid #000;
+      margin-bottom: 60/@px2rem;
     }
 }
 .right-side{
