--- a/src/page/dy/index/index.less
+++ b/src/page/dy/index/index.less
@@ -62,7 +62,13 @@
   background: #fff;
   height: 450/@px2rem;
   margin-bottom: 100/@px2rem;
+  overflow: hidden;
 }
 .chirld-nav{
   margin-bottom: 60/@px2rem;
+}
+.adv{
+  background: url('../../images/adv.jpg') 0 0 no-repeat;
+  background-size:100% 100%;
+  height: 450/@px2rem;
 }
