--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -109,11 +109,21 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 .txt-red{
   color: #bf2c2a;
 }
-.footer{
-   height: 200/@px2rem;
-   background:#fff;
-   padding-top: 30/@px2rem;
-   .copyright{
-      color: #212529;
-   }
+.row{
+  display:flex;
+  flex-wrap: wrap;
+  margin-right: -12px;
+  margin-left: -12px;
+  margin-bottom: 100/@px2rem;
+  color: #212529;
 }
+.container{
+  width: 1140px;
+  padding-right: 12px;
+  padding-left: 12px;
+  // margin-right: auto;
+  // margin-left: auto;
+   margin: 0 auto;
+   position: relative;
+}
+
