--- a/src/page/index/index.less
+++ b/src/page/index/index.less
@@ -19,3 +19,23 @@ background: url('../images/adv.jpg') 0 0 no-repeat;
 background-size:100% 100%;
 height: 450/@px2rem;
 }
+.articlelist{
+  background: #fff;
+  border-radius: 60/@px2rem;
+  margin-bottom: 80/@px2rem;
+  padding: 30px;
+  overflow: hidden;
+  h3{
+    margin-bottom: 10px;
+  }
+  p{
+    text-indent: 20px;
+    text-align: justify;
+    display: -webkit-box;
+    display: box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    height: 66px;
+    overflow: hidden;
+  }
+}
