--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -121,9 +121,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   width: 1140px;
   padding-right: 12px;
   padding-left: 12px;
-  // margin-right: auto;
-  // margin-left: auto;
-   margin: 0 auto;
-   position: relative;
+  margin: 0 auto;
+  position: relative;
+  font-size:24/@px2rem;
 }
 
